--- a/style.css
+++ b/style.css
@@ -4,14 +4,21 @@
 @tailwind components;
 @tailwind utilities;
 
-
-
+@font-face {
+  font-family: "DM";
+  src: url(./public/catmaran.woff2);
+}
+*{
+  font-family: "DM";
+}
 html,
 body {
   position: relative;
   height: 100%;
   scroll-behavior: smooth;
 }
+
+
 
 ::-webkit-scrollbar {
   width: 10px;
