--- a/styles/about.css
+++ b/styles/about.css
@@ -1,4 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url(https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap);@tailwind base;@tailwind components;@tailwind utilities;.active{color:#28abe4}.top-cover{background:url(../public/IT_office.jpg) center center/cover no-repeat}::-webkit-scrollbar{width:10px}::-webkit-scrollbar-track{background:0 0}::-webkit-scrollbar-thumb{background:#28abe3}::-webkit-scrollbar-button{display:none}
+
+
+/* @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -26,4 +29,4 @@
 
 ::-webkit-scrollbar-button {
   display: none;
-}
+} */
